Changes in version 0.x (2004-xx-xx)
-----------------------------------

* Fixed EH-CACHE-based caching implementation behaviour when cache exists

Changes in version 0.6 (2004-08-09)
-----------------------------------

* Added domain object instance access control list (ACL) packages
* Added feature so DaoAuthenticationProvider returns User in Authentication
* Added AbstractIntegrationFilter.secureContext property for custom contexts
* Added stack trace logging to SecurityEnforcementFilter
* Added exception-specific target URLs to AbstractProcessingFilter
* Added JdbcDaoImpl hook so subclasses can insert custom granted authorities
* Added AuthenticationProvider that wraps JAAS login modules
* Added support for EL expressions in the authz tag library
* Added failed Authentication object to AuthenticationExceptions
* Added signed JARs to all official release builds (see readme.txt)
* Added remote client authentication validation package
* Added protected sendAccessDeniedError method to SecurityEnforcementFilter
* Updated Authentication to be serializable (Weblogic support)
* Updated JAR to Spring 1.1 RC 1
* Updated to Clover 1.3
* Updated to HSQLDB version 1.7.2 Release Candidate 6D
* Refactored User to net.sf.acegisecurity.UserDetails interface
* Refactored CAS package to store UserDetails in CasAuthenticationToken
* Improved organisation of DaoAuthenticationProvider to facilitate subclassing
* Improved test coverage (now 98.3%)
* Improved JDBC-based tests to use in-memory database rather than filesystem
* Fixed Linux compatibility issues (directory case sensitivity etc)
* Fixed AbstractProcessingFilter to handle servlet spec container differences
* Fixed AbstractIntegrationFilter to resolve a Weblogic compatibility issue
* Fixed CasAuthenticationToken if proxy granting ticket callback not requested
* Fixed EH-CACHE handling on web context refresh
* Documentation improvements

Changes in version 0.51 (2004-06-06)
------------------------------------
