@@ -1,6 +1,8 @@
 Changes in version 0.x (2004-xx-xx)
 -----------------------------------
 
+* Added additional DaoAuthenticationProvider event when user not found
+* Added Authentication.getDetails() to DaoAuthenticationProvider response
 * Fixed EH-CACHE-based caching implementation behaviour when cache exists
 
 Changes in version 0.6 (2004-08-09)
